--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm build",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,17 @@
     "url": "https://github.com/mwonng/tg-whisper/issues"
   },
   "homepage": "https://github.com/mwonng/tg-whisper#readme",
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
     "telegraf": "^3.36.0"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
